; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mediatek/extr_mtk_eth_soc.c_mtk_rx_irq_disable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mediatek/extr_mtk_eth_soc.c_mtk_rx_irq_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtk_eth = type { i32 }

@MTK_PDMA_INT_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mtk_eth*, i32)* @mtk_rx_irq_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mtk_rx_irq_disable(%struct.mtk_eth* %0, i32 %1) #0 {
  %3 = alloca %struct.mtk_eth*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store %struct.mtk_eth* %0, %struct.mtk_eth** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.mtk_eth*, %struct.mtk_eth** %3, align 8
  %8 = getelementptr inbounds %struct.mtk_eth, %struct.mtk_eth* %7, i32 0, i32 0
  %9 = load i64, i64* %5, align 8
  %10 = call i32 @spin_lock_irqsave(i32* %8, i64 %9)
  %11 = load %struct.mtk_eth*, %struct.mtk_eth** %3, align 8
  %12 = load i32, i32* @MTK_PDMA_INT_MASK, align 4
  %13 = call i32 @mtk_r32(%struct.mtk_eth* %11, i32 %12)
  store i32 %13, i32* %6, align 4
  %14 = load %struct.mtk_eth*, %struct.mtk_eth** %3, align 8
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* %4, align 4
  %17 = xor i32 %16, -1
  %18 = and i32 %15, %17
  %19 = load i32, i32* @MTK_PDMA_INT_MASK, align 4
  %20 = call i32 @mtk_w32(%struct.mtk_eth* %14, i32 %18, i32 %19)
  %21 = load %struct.mtk_eth*, %struct.mtk_eth** %3, align 8
  %22 = getelementptr inbounds %struct.mtk_eth, %struct.mtk_eth* %21, i32 0, i32 0
  %23 = load i64, i64* %5, align 8
  %24 = call i32 @spin_unlock_irqrestore(i32* %22, i64 %23)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @mtk_r32(%struct.mtk_eth*, i32) #1

declare dso_local i32 @mtk_w32(%struct.mtk_eth*, i32, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
